// Code generated by protoc-gen-go. DO NOT EDIT.
// versions:
// 	protoc-gen-go v1.31.0
// 	protoc        v3.20.0
// source: user_stock.proto

package pb

import (
	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
	reflect "reflect"
	sync "sync"
)

const (
	// Verify that this generated code is sufficiently up-to-date.
	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
	// Verify that runtime/protoimpl is sufficiently up-to-date.
	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
)

type UserStock struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	UserId                int64  `protobuf:"varint,1,opt,name=user_id,json=userId,proto3" json:"user_id,omitempty"`
	StockId               int64  `protobuf:"varint,2,opt,name=stock_id,json=stockId,proto3" json:"stock_id,omitempty"`
	Quantity              int32  `protobuf:"varint,3,opt,name=quantity,proto3" json:"quantity,omitempty"`
	PurchasePricePerShare string `protobuf:"bytes,4,opt,name=purchase_price_per_share,json=purchasePricePerShare,proto3" json:"purchase_price_per_share,omitempty"`
}

func (x *UserStock) Reset() {
	*x = UserStock{}
	if protoimpl.UnsafeEnabled {
		mi := &file_user_stock_proto_msgTypes[0]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *UserStock) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*UserStock) ProtoMessage() {}

func (x *UserStock) ProtoReflect() protoreflect.Message {
	mi := &file_user_stock_proto_msgTypes[0]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use UserStock.ProtoReflect.Descriptor instead.
func (*UserStock) Descriptor() ([]byte, []int) {
	return file_user_stock_proto_rawDescGZIP(), []int{0}
}

func (x *UserStock) GetUserId() int64 {
	if x != nil {
		return x.UserId
	}
	return 0
}

func (x *UserStock) GetStockId() int64 {
	if x != nil {
		return x.StockId
	}
	return 0
}

func (x *UserStock) GetQuantity() int32 {
	if x != nil {
		return x.Quantity
	}
	return 0
}

func (x *UserStock) GetPurchasePricePerShare() string {
	if x != nil {
		return x.PurchasePricePerShare
	}
	return ""
}

var File_user_stock_proto protoreflect.FileDescriptor

var file_user_stock_proto_rawDesc = []byte{
	0x0a, 0x10, 0x75, 0x73, 0x65, 0x72, 0x5f, 0x73, 0x74, 0x6f, 0x63, 0x6b, 0x2e, 0x70, 0x72, 0x6f,
	0x74, 0x6f, 0x12, 0x02, 0x70, 0x62, 0x22, 0x94, 0x01, 0x0a, 0x09, 0x55, 0x73, 0x65, 0x72, 0x53,
	0x74, 0x6f, 0x63, 0x6b, 0x12, 0x17, 0x0a, 0x07, 0x75, 0x73, 0x65, 0x72, 0x5f, 0x69, 0x64, 0x18,
	0x01, 0x20, 0x01, 0x28, 0x03, 0x52, 0x06, 0x75, 0x73, 0x65, 0x72, 0x49, 0x64, 0x12, 0x19, 0x0a,
	0x08, 0x73, 0x74, 0x6f, 0x63, 0x6b, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x03, 0x52,
	0x07, 0x73, 0x74, 0x6f, 0x63, 0x6b, 0x49, 0x64, 0x12, 0x1a, 0x0a, 0x08, 0x71, 0x75, 0x61, 0x6e,
	0x74, 0x69, 0x74, 0x79, 0x18, 0x03, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x71, 0x75, 0x61, 0x6e,
	0x74, 0x69, 0x74, 0x79, 0x12, 0x37, 0x0a, 0x18, 0x70, 0x75, 0x72, 0x63, 0x68, 0x61, 0x73, 0x65,
	0x5f, 0x70, 0x72, 0x69, 0x63, 0x65, 0x5f, 0x70, 0x65, 0x72, 0x5f, 0x73, 0x68, 0x61, 0x72, 0x65,
	0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x15, 0x70, 0x75, 0x72, 0x63, 0x68, 0x61, 0x73, 0x65,
	0x50, 0x72, 0x69, 0x63, 0x65, 0x50, 0x65, 0x72, 0x53, 0x68, 0x61, 0x72, 0x65, 0x42, 0x2e, 0x5a,
	0x2c, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x52, 0x6f, 0x79, 0x63,
	0x65, 0x41, 0x7a, 0x75, 0x72, 0x65, 0x2f, 0x67, 0x6f, 0x2d, 0x73, 0x74, 0x6f, 0x63, 0x6b, 0x69,
	0x6e, 0x66, 0x6f, 0x2f, 0x73, 0x68, 0x61, 0x72, 0x65, 0x64, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70,
	0x72, 0x6f, 0x74, 0x6f, 0x33,
}

var (
	file_user_stock_proto_rawDescOnce sync.Once
	file_user_stock_proto_rawDescData = file_user_stock_proto_rawDesc
)

func file_user_stock_proto_rawDescGZIP() []byte {
	file_user_stock_proto_rawDescOnce.Do(func() {
		file_user_stock_proto_rawDescData = protoimpl.X.CompressGZIP(file_user_stock_proto_rawDescData)
	})
	return file_user_stock_proto_rawDescData
}

var file_user_stock_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
var file_user_stock_proto_goTypes = []interface{}{
	(*UserStock)(nil), // 0: pb.UserStock
}
var file_user_stock_proto_depIdxs = []int32{
	0, // [0:0] is the sub-list for method output_type
	0, // [0:0] is the sub-list for method input_type
	0, // [0:0] is the sub-list for extension type_name
	0, // [0:0] is the sub-list for extension extendee
	0, // [0:0] is the sub-list for field type_name
}

func init() { file_user_stock_proto_init() }
func file_user_stock_proto_init() {
	if File_user_stock_proto != nil {
		return
	}
	if !protoimpl.UnsafeEnabled {
		file_user_stock_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*UserStock); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
	}
	type x struct{}
	out := protoimpl.TypeBuilder{
		File: protoimpl.DescBuilder{
			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
			RawDescriptor: file_user_stock_proto_rawDesc,
			NumEnums:      0,
			NumMessages:   1,
			NumExtensions: 0,
			NumServices:   0,
		},
		GoTypes:           file_user_stock_proto_goTypes,
		DependencyIndexes: file_user_stock_proto_depIdxs,
		MessageInfos:      file_user_stock_proto_msgTypes,
	}.Build()
	File_user_stock_proto = out.File
	file_user_stock_proto_rawDesc = nil
	file_user_stock_proto_goTypes = nil
	file_user_stock_proto_depIdxs = nil
}
